--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ p {
     margin: 30px;
 }
 
+.frameWidth {
+margin: 0px 10%;
+}
+
 #genFrame {
     display: flex;
     flex-direction: column;
@@ -53,6 +57,7 @@ p {
     height: 500px;
     border: 4px solid #fe7333;
     border-radius: 10%;
+    margin-top: 5%;
 }
 
 #iconRow {
