--- a/style.css
+++ b/style.css
@@ -73,45 +73,24 @@ li {
     margin: 25px 0px;
 }
 
-#genFrame {
-    /* background-color: crimson; */
-    display: flex;
+.frame {
     box-sizing: border-box;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 380px;   
     height: 90vh;
     border: 4px solid #fe7333;
-    border-radius: 10%;
+    border-radius: 5%;
     margin-top: 3vh;
+}
 
+#genFrame {
+    justify-content: center;
 }
 
 #welcomeFrame {
-    display: none;
-    box-sizing: border-box;
-    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    width: 380px;   
-    height: 90vh;
-    border: 4px solid #fe7333;
-    border-radius: 10%;
-    margin-top: 3vh;
 }
-
-/* #welcomeInfo {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    width: 270px;
-    height: 90px;
-    text-align: center;
-    margin: 0px;
-    margin-top: 5px;
-    display: none;
-} */
 
 #txtBlock {
     justify-content: space-around;
@@ -121,9 +100,7 @@ li {
 
 
 #iconRow {
-    /* background-color: cornflowerblue; */
     display: flex;
-
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
@@ -138,26 +115,21 @@ li {
 }
 
 #centCont {
-    /* background-color: forestgreen; */
     display: flex;
     flex: 1 1 auto;
     box-sizing: border-box;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
-
 #outputRowContent {
-    /* background-color: darkslategray; */
     max-width: fit-content;
     background-color: #222222;
     border: 2px solid #2c2c2c;
 }
 
 #keyEvent {
-    /* background-color: dodgerblue; */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -170,20 +142,16 @@ li {
 
 #keyEvent:focus-visible {
     outline: transparent;
-  }
+}
 
 #keyCode {
 background-color: transparent;
-/* border: 1px solid black; */
 }
 
 #btnRowContent {
-    /* background-color: darkred; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* flex: 1 1 auto; */
-    /* flex-basis: auto; */
     height: 50px;
     width: 100%;
     margin-top: auto;
@@ -191,7 +159,6 @@ background-color: transparent;
 }
 
 #btn {
-      
     font-size: 20px;
     width: 100px;
     background-color: transparent;
@@ -201,8 +168,9 @@ background-color: transparent;
     padding:  5px 20px 5px 20px;
 }
 
-@media (max-width: 720px) {
+/* <<<<< MEDIA QUERIES >>>>> */
 
+@media (max-width: 720px) {
 
 #mobIcon {
     display: flex;
@@ -214,17 +182,88 @@ background-color: transparent;
 
 #genFrame {
     height: 85vh;
-    border-radius: 5%;
-
 }
 
 #welcomeFrame {
     height: 85vh;
-    border-radius: 5%;
-
 }
 
+#btn {
+    font-size: 10px;
+        width: 50px;
+        border-bottom: 0px;
 }
 
+.bold {
+font-weight: 400;
+font-size: 20px;
+}
+
+.txtMarg {
+margin: 5px 0px;
+}
+
+.icon {
+width: 30px;
+}
+}
+
+@media (max-height: 500px) {
+
+#iconRow {
+    margin-top: 40px;
+}
+
+#btnRowContent { 
+    margin-bottom: 80px;
+}
+
+#keyEvent {
+    height: 30px;
+}
+}
+
+@media (max-height: 380px) {
+    
+    #title {
+        display: none;
+    }
+
+    #desc {
+        display: none;
+    }
+
+    #btnRowContent { 
+        margin-bottom: 50px;
+    }
+
+    #btn {
+        font-size: 10px;
+            width: 50px;
+            border-bottom: 0px;
+    }
+
+.bold {
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.txtMarg {
+    margin: 5px 0px;
+}
+
+.icon {
+    width: 30px;
+}
+}
+
+@media (max-height: 300px) {
+#genFrame {
+    display: none;
+    }
+#welcomeFrame {
+    display: none;
+}
+}
 
 
